--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,13 +9,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity"
-            android:label="Dictionary"
-            >
+        <activity android:name=".CapitalActivity"></activity>
+        <activity
+            android:name=".MainActivity"
+            android:label="Dictionary">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"
-
-                    />
+                <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
