--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,16 +9,20 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".CapitalActivity"></activity>
-        <activity
-            android:name=".MainActivity"
-            android:label="Dictionary">
+        <activity android:name=".DashBoard">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".AddcountryActivity">
+
+        </activity>
+        <activity android:name=".CapitalActivity" />
+        <activity
+            android:name=".MainActivity"
+            android:label="Dictionary"></activity>
     </application>
 
 </manifest>
