--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".DialActivity"></activity>
         <activity android:name=".DashBoard">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -16,13 +17,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".AddcountryActivity">
-
-        </activity>
+        <activity android:name=".AddcountryActivity"></activity>
         <activity android:name=".CapitalActivity" />
         <activity
             android:name=".MainActivity"
-            android:label="Dictionary"></activity>
+            android:label="Dictionary" />
     </application>
 
 </manifest>
